--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
-    "expo": "^50.0.0",
+    "@react-navigation/stack": "^6.3.29",
+    "expo": "^50.0.17",
+    "expo-av": "~13.10.6",
+    "expo-camera": "~14.1.3",
     "expo-constants": "~15.4.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
