--- a/app.json
+++ b/app.json
@@ -15,7 +15,9 @@
       [
         "expo-font",
         {
-          "fonts": ["./assets/fonts/Jersey10-Regular.ttf"]
+          "fonts": [
+            "./assets/fonts/Jersey10-Regular.ttf"
+          ]
         }
       ]
     ],
@@ -29,11 +31,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.InvaluableAsset"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     }
   }
 }
-
