--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "^50.0.17",
-    "expo-av": "~13.10.6",
-    "expo-camera": "~14.1.3",
-    "expo-constants": "~15.4.6",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.8",
+    "expo-av": "~14.0.5",
+    "expo-camera": "~15.0.9",
+    "expo-constants": "~16.0.1",
+    "expo-font": "~12.0.5",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
-    "expo-font": "~11.10.3"
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
