--- a/app.json
+++ b/app.json
@@ -25,7 +25,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.InvaluableAsset"
     },
     "android": {
       "adaptiveIcon": {
@@ -36,6 +37,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "55cb420f-3b70-4fda-a485-24b4486b3748"
+      }
     }
   }
 }
